--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,12 +39,12 @@
       </ng-container>
 
       <ng-container matColumnDef="dob">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> dob </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> DOB </th>
         <td mat-cell *matCellDef="let row"> {{row.dob | date}}</td>
       </ng-container>
 
       <ng-container matColumnDef="gender">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> gender </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender </th>
         <td mat-cell *matCellDef="let row"> {{row.gender}}</td>
       </ng-container>
 
