--- a/src/app/emp-edit/emp-edit.component.html
+++ b/src/app/emp-edit/emp-edit.component.html
@@ -6,11 +6,11 @@
         <div class="row">
             <mat-form-field appearance="outline">
                 <mat-label>First name</mat-label>
-                <input matInput type="text" placeholder="Ex. Prathmesh" formControlName="firstName">
+                <input matInput type="text" placeholder="Ex. Prathmesh" formControlName="name">
             </mat-form-field>
             <mat-form-field appearance="outline">
-                <mat-label>Last Name</mat-label>
-                <input matInput placeholder="Ex. Patil" formControlName="lastName">
+                <mat-label>User Name</mat-label>
+                <input matInput placeholder="Ex. Patil" formControlName="username">
             </mat-form-field>
         </div>
 
@@ -20,47 +20,18 @@
                 <input matInput type="email" placeholder="Ex. test@gmail.com" formControlName="email">
             </mat-form-field>
             <mat-form-field appearance="outline">
-                <mat-label>Date of birth</mat-label>
-                <input matInput [matDatepicker]="picker" formControlName="dob">
-                <mat-hint>MM/DD/YYYY</mat-hint>
-                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
+                <mat-label>Website</mat-label>
+                <input matInput type="text" placeholder="Ex. abs.org" formControlName="website">
             </mat-form-field>
         </div>
 
         <div class="row">
-            <mat-radio-group aria-label="Select an option" formControlName="gender">
-                <mat-label><b>Gender</b></mat-label>
-                <mat-radio-button value="male">Male</mat-radio-button>
-                <mat-radio-button value="female">Female</mat-radio-button>
-                <mat-radio-button value="others">Others</mat-radio-button>
-            </mat-radio-group>
+            <mat-form-field appearance="outline">
+                <mat-label>Phone No.</mat-label>
+                <input matInput type="number" placeholder="Ex. 9988776655" formControlName="phone">
+            </mat-form-field>
         </div>
 
-        <div class="row">
-            <mat-form-field appearance="outline">
-                <mat-label>Education</mat-label>
-                <mat-select formControlName="education">
-                    <mat-option *ngFor="let val of education" [value]="val">{{val}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-                <mat-label>Company</mat-label>
-                <input matInput placeholder="Ex. Google" formControlName="company">
-            </mat-form-field>
-        </div>
-        <div class="row">
-            <mat-form-field appearance="outline">
-                <mat-label>Experience</mat-label>
-                <input matInput placeholder="Ex. 4" type="number" formControlName="experience">
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-                <mat-label>Package</mat-label>
-                <input matInput placeholder="Ex. 12" type="number" formControlName="package">
-                <mat-hint>In rupees</mat-hint>
-            </mat-form-field>
-        </div>
     </div>
     <div mat-dialog-actions class="action">
         <button mat-raised-button type="button" [mat-dialog-close]="false">Cancel</button>
